--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
 
-    <h1>Increment Button Example</h1>
+    <h1>Increment Button</h1>
 
     <p>Click the button to increment:</p>
 
-    <button id="incrementButton">Increment</button>
+    <button id="incrementButton">Plus</button>
 
     <p>Count: <span id="count">0</span></p>
 
